// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple failures error messages 1`] = `
"
MultipleFailures
    FileRemovalFailure
        path: container/bar.unremovable
        error:
            RemovalError: File or directory 'container/bar.unremovable' cannot be deleted
    FileRemovalFailure
        path: container/baz.unremovable
        error:
            RemovalError: File or directory 'container/baz.unremovable' cannot be deleted
"
`;

exports[`multiple failures returns a result matching snapshot 1`] = `
MultipleFailures {
  "code": 2,
  "error": Array [
    FileRemovalFailure {
      "code": 6,
      "error": [RemovalError: File or directory 'container/bar.unremovable' cannot be deleted],
      "path": "container/bar.unremovable",
      "value": undefined,
    },
    FileRemovalFailure {
      "code": 6,
      "error": [RemovalError: File or directory 'container/baz.unremovable' cannot be deleted],
      "path": "container/baz.unremovable",
      "value": undefined,
    },
  ],
  "value": undefined,
}
`;

exports[`one failure error messages 1`] = `
"
FileRemovalFailure
    path: container/bar.unremovable
    error:
        RemovalError: File or directory 'container/bar.unremovable' cannot be deleted
"
`;

exports[`one failure returns a result matching snapshot 1`] = `
FileRemovalFailure {
  "code": 6,
  "error": [RemovalError: File or directory 'container/bar.unremovable' cannot be deleted],
  "path": "container/bar.unremovable",
  "value": undefined,
}
`;
